--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -53,10 +53,10 @@ a {
 
 .button-group {
   display: flex;
-  gap: 20px;
-  margin-top: 30px;
+  flex-wrap: wrap;
+  margin-top: 20px;
   a {
-    margin-right: 20px;
+    margin: 0 20px 10px 0;
     font-size: $font-subhead;
     padding: 2px 8px 2px;
     background: rgba(92, 167, 255, 0.2);
@@ -78,6 +78,7 @@ header {
   align-items: center;
   justify-content: space-between;
   .menu {
+    margin-bottom: 5px;
     a {
       font-size: $font-subhead;
       padding: 19px 30px 18px;
@@ -95,10 +96,10 @@ footer {
   margin: 90px 0 0;
   .link-group {
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
     a {
       box-sizing: border-box;
-      margin-right: 10px;
+      margin: 0 10px 10px 0;
       font-size: $font-subhead;
       padding: 2px 8px 2px;
       border: 1px solid rgba(64, 60, 0, 0);
@@ -123,4 +124,32 @@ footer {
   height: 100vh;
   width: 100vw;
   background: center / cover no-repeat url(/assets/bg.jpeg);
+}
+
+@media screen and (max-width: 800px) {
+  $font-body: 18px; 
+  $font-head: 18px;
+  $font-subhead: 16px;
+
+  body {
+    margin: 0 20px;
+    font-size: $font-body;
+  }
+
+  h1 {
+    font-size: $font-head;
+  }
+
+  .button-group a, footer .link-group a{
+    font-size: $font-subhead;
+  }
+
+  header  {
+    // flex-direction: column;
+    .menu a {
+      font-size: $font-subhead;
+      padding: 15px 20px 15px;
+    }
+  }
+
 }
