--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -12,7 +12,7 @@ $font-subhead: 18px;
 
 // General
 body {
-  color: #403c00;
+  color: #4b3d00;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -40,7 +40,7 @@ h1 {
 }
 
 a {
-  color: rgb(64, 60, 0);
+  color: #4b3d00;
 }
 
 .container {
@@ -59,7 +59,7 @@ a {
     margin: 0 20px 10px 0;
     font-size: $font-subhead;
     padding: 2px 8px 2px;
-    background: rgba(92, 167, 255, 0.2);
+    background: rgba(146, 146, 146, 0.2);
     border: 1px solid rgba(64, 60, 0, 0.2);
     text-decoration: none;
     backdrop-filter: blur(3px);
@@ -82,7 +82,7 @@ header {
     a {
       font-size: $font-subhead;
       padding: 19px 30px 18px;
-      background: rgba(92, 167, 255, 0.2);
+      background: rgba(146, 146, 146, 0.2);
       box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(30px);
       border-radius: 40px;
@@ -123,7 +123,7 @@ footer {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: center / cover no-repeat url(/assets/bg.jpeg);
+  background: center / cover no-repeat url(/assets/9L9A9082.jpeg);
 }
 
 @media screen and (max-width: 800px) {
