--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -152,6 +152,17 @@ footer .link-group a:hover {
   background: center/cover no-repeat url(/assets/9L9A9082.jpeg);
 }
 
+video {
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -100;
+}
+
 @media screen and (max-width: 800px) {
   body {
     margin: 0 20px;
