--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -130,8 +130,9 @@ video {
   position: fixed;
     top: 0;
     left: 0;
-    min-width: 100%; 
-    min-height: 100%;
+    right: 0;
+    width: 100vw; 
+    height: 100vh;
     z-index: -100;
   .bgVid {
     
