--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,7 +19,7 @@ body {
 }
 
 p {
-  max-width: 30em;
+  max-width: 24em;
   margin: 15px 0;
 }
 
@@ -29,6 +29,10 @@ h1 {
   font-weight: normal;
   line-height: 1.4em;
   margin: 0;
+}
+
+span.cities {
+  margin-left: 20px;
 }
 
 a {
