--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -27,7 +27,7 @@ body {
 }
 
 p {
-  max-width: 30em;
+  max-width: 24em;
   margin: 15px 0;
 }
 
@@ -37,6 +37,9 @@ h1 {
   font-weight: normal;
   line-height: 1.4em;
   margin: 0;
+}
+span.cities {
+  margin-left: 20px;
 }
 
 a {
