--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  color: #4b3d00;
+  color: #f2f5ff;
+  background-color: #7790B0;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -36,7 +37,7 @@ span.cities {
 }
 
 a {
-  color: #4b3d00;
+  color: #f2f5ff;
 }
 
 .container {
@@ -67,8 +68,8 @@ a {
   margin: 0 20px 10px 0;
   font-size: 18px;
   padding: 2px 8px 2px;
-  background: rgba(146, 146, 146, 0.2);
-  border: 1px solid rgba(64, 60, 0, 0.2);
+  background: rgba(112, 113, 119, 0.2);
+  border: 1px solid rgba(0, 26, 144, 0.2);
   text-decoration: none;
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
@@ -132,7 +133,7 @@ footer .link-group a {
   margin: 0 10px 10px 0;
   font-size: 18px;
   padding: 2px 8px 2px;
-  border: 1px solid rgba(64, 60, 0, 0);
+  border: 1px solid rgba(0, 26, 144, 0);
   text-decoration: none;
   border-radius: 9px;
   -webkit-transition: ease-in-out all 200ms;
@@ -143,7 +144,7 @@ footer .link-group a:hover {
   background: rgba(155, 155, 155, 0.2);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
-  border: 1px solid rgba(64, 60, 0, 0.2);
+  border: 1px solid rgba(0, 26, 144, 0.2);
 }
 
 .bg {
@@ -157,9 +158,10 @@ footer .link-group a:hover {
 }
 
 video {
+  background-color: #7790B0;
   -o-object-fit: cover;
      object-fit: cover;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
