--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,15 +25,15 @@ p {
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 18px;
   text-align: left;
   font-weight: normal;
   line-height: 1.4em;
-  margin: 0;
+  margin: 0 0 40px;
 }
 
 span.cities {
-  margin-left: 20px;
+  margin-left: 30px;
 }
 
 a {
@@ -61,7 +61,7 @@ a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .button-group a {
