--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -33,14 +33,14 @@ p {
 }
 
 h1 {
-  font-size: $font-head;
+  font-size: $font-subhead;
   text-align: left;
   font-weight: normal;
   line-height: 1.4em;
-  margin: 0;
+  margin: 0 0 40px;
 }
 span.cities {
-  margin-left: 20px;
+  margin-left: 30px;
 }
 
 a {
@@ -58,7 +58,7 @@ a {
 .button-group {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 40px;
   a {
     margin: 0 20px 10px 0;
     font-size: $font-subhead;
