--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -13,6 +13,7 @@ $font-subhead: 18px;
 // General
 body {
   color: #f2f5ff;
+  text-shadow: 0px 0px 4px rgba(0,0,0, 0.3);
   background-color: #7790B0;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
@@ -34,6 +35,7 @@ p {
 
 h1 {
   font-size: $font-subhead;
+  text-shadow: 0px 0px 4px rgba(0,0,0, 0.3);
   text-align: left;
   font-weight: normal;
   line-height: 1.4em;
